--- a/style.css
+++ b/style.css
@@ -745,6 +745,10 @@ i{
     }
     @media screen and (max-width:600px)
     {
+        body{
+            overflow: hidden;
+
+        }
         .nav_menu_button{
             display: none;
         }
