--- a/style.css
+++ b/style.css
@@ -746,7 +746,7 @@ i{
     @media screen and (max-width:600px)
     {
         body{
-            overflow: hidden;
+            overflow-x: hidden;
 
         }
         .nav_menu_button{
