--- a/style.css
+++ b/style.css
@@ -37,13 +37,14 @@ body {
 
 .head {
     position: relative;
+    margin-right: 50px;
 }
 
 .h1name {
     font-size: 30px;
     font-weight: 600;
     color: rgb(255, 255, 255);
-    /* margin-left: -80px; */
+    margin-left: -10px;
     margin-top: -10px;
 
 }
