--- a/style.css
+++ b/style.css
@@ -37,11 +37,11 @@ body {
 
 .head {
     position: relative;
-    margin-right: 50px;
+    /* margin-right: 50px; */
 }
 
 .h1name {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 600;
     color: rgb(255, 255, 255);
     margin-left: -10px;
